# locus

./: .gitignore  CMakeLists.txt  README.md  flake.nix
include/: cli.hpp  dns_header.hpp  dns_question.hpp  dns_record.hpp  ip.hpp  query.hpp  resolver.hpp  utils.hpp
src/: cli.cpp  main.cpp  query.cpp  resolver.cpp  utils.cpp
tests/: main.cpp
